2023-08-16  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): Fixed the proxy settings by OCSP
        * check_ssl_cert (fetch_certificate): Harmonize error messages from tinyproxy

2023-08-10  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixed a bug in the proxy command line options validation

2023-07-28  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixed a bug if the host cannot be resolved and --resolve is specified

2023-07-19  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (prepend_critical_message): Display the port number in the CRITICAL output (as for OK)
        * check_ssl_cert (append_warning_message): Display the port number in the WARNING output (as for OK)

2023-06-13  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixed a bug in the debugging output of the connection check

2023-05-23  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: Fixed the initialization order of OPENSSL and GREP_BIN because of the proxy check

2023-05-14  Matteo Corti  <matteo@corti.li>

        * Added check_ssl_cert_icinga2.conf to the documentation check and distribution files. Added some missing options

2023-04-25  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixes the protocol used by nmap if the host is resolved with /etc/hosts
        * check_ssl_cert (check_crl): Do not convert a CRL if already in the correct format
        * check_ssl_cert (extract_cert_attribute): Removed a PCRE grep expression (non-standard)

2023-04-24  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Considers /etc/hosts for the existence checks

2023-04-21  Matteo Corti  <matteo@corti.li>

        * test/unit_tests.sh (testFloatingPointThresholdsExpired): Added a test for decimal critical or warning values
          and expired certificates
        * check_ssl_cert (extract_cert_attribute): Fix CRL output format parsing